# design_patterns

./: .gitignore  README  README.md  design_patterns.code-workspace  omnisharp.json
chain_of_responsibility_pattern/dotnet/: demo1.csx  demo2.csx
chain_of_responsibility_pattern/python/: demo1.py  demo2.py  demo3.py  demo4.py  demo5.py
chain_of_responsibility_pattern/python/pipeline_demo1/: circuit_breaker.py  main.py  notification.py  pipeline.py
chain_of_responsibility_pattern/python/pipeline_demo1/rules/: __init__.py  aggregate_data.py  check_circuit_breaker.py  check_data_completeness.py  check_quarantine_threshold.py  (+4 more)
mix_exercises/demo1/: app1.csx  app1.java  app1.py  app2.py
mix_exercises/demo2/: app1.csx  app2.csx
mix_exercises/demo3/fast_api_demo1/: main.py  pyproject.toml
mix_exercises/demo3/fast_api_demo2/: pyproject.toml
mix_exercises/demo3/fast_api_demo3/: pyproject.toml
mix_exercises/demo3/fast_api_demo3/app/: main.py
mix_exercises/demo3/fast_api_demo3/app/routers/: books.py  users.py
mix_exercises/demo3/fast_api_demo3/app/schemas/: book.py  user.py
mix_exercises/demo3/fast_api_demo3/tests/: test_main.py
parameter_object_and_result_object_pattern/dotnet/: README.md  app1.csx  app2.csx  app3.csx
parameter_object_and_result_object_pattern/mix_exercises/demo1/: app1.csx  app1.java  app1.py  app1.ts  app2.java
parameter_object_and_result_object_pattern/python/: app1.py  app2.py  app3.py  app4.py  app5.py  app6.py  app7.py
parameter_object_and_result_object_pattern/typescript/: app1.ts  app2.ts  package-lock.json  package.json
(+1 files in other folders)
