[tool.poetry]
name = "fast-api-demo3"
version = "0.1.0"
description = ""
authors = ["kenan hancer <kenanhancer@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
fastapi-utils = "^0.7.0"
pydantic = {extras = ["email"], version = "^2.9.2"}


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
